Добавлена корзина и список ее продуктов на главной странице

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 
 <html ng-app="market">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
 
 <head>
     <meta charset="utf-8">
@@ -35,11 +38,34 @@
             <td>{{p.title}}</td>
             <td>{{p.price}}</td>
             <td>
-                <button class="btn btn-danger" ng-click="deleteProduct(p.id)">Удалить</button>
+                <button class="btn btn-danger" ng-click="deleteProduct(p.id)"><i class="far fa-trash-alt"></i></button>
+                <button class="btn btn-secondary" ng-click="addToCart(p.id)"><i class="fas fa-cart-plus"></i></button>
             </td>
         </tr>
         </tbody>
     </table>
+
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <td>ID</td>
+            <td>Название</td>
+            <td>Цена</td>
+            <td></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="p in cartsProducts">
+            <td>{{p.id}}</td>
+            <td>{{p.title}}</td>
+            <td>{{p.price}}</td>
+            <td>
+                <button class="btn btn-danger" ng-click="deleteProductOfCart(p.id)"><i class="far fa-trash-alt"></i></button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
     <p></p>
     <h3>Добавить продукт</h3>
     <p></p>
