--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 <head>
     <meta charset="utf-8">
@@ -45,22 +46,40 @@
         </tbody>
     </table>
 
+    <p></p>
+    <h3>Корзина</h3>
+    <p></p>
     <table class="table table-hover">
         <thead>
         <tr>
             <td>ID</td>
             <td>Название</td>
+            <td>Количество</td>
             <td>Цена</td>
             <td></td>
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="p in cartsProducts">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
+        <tr ng-repeat="item in cart.items">
+            <td>{{item.productId}}</td>
+            <td>{{item.productTitle}}</td>
             <td>
-                <button class="btn btn-danger" ng-click="deleteProductOfCart(p.id)"><i class="far fa-trash-alt"></i></button>
+                {{item.quantity}}
+                <div class="btn-group-vertical">
+                    <button class="btn btn-outline-secondary btn-sm" ng-click="changeQuantityOfProduct(item.productId, 1)"><i class="bi bi-arrow-up"></i></button>
+                    <button class="btn btn-outline-secondary btn-sm" ng-click="changeQuantityOfProduct(item.productId, -1)"><i class="bi bi-arrow-down"></i></button>
+                </div>
+
+            </td>
+            <td>{{item.pricePerProduct + 'x' + item.quantity + '=' + item.price}}</td>
+            <td>
+                <button class="btn btn-danger" ng-click="deleteProductOfCart(item.productId)"><i class="far fa-trash-alt"></i></button>
+            </td>
+        </tr>
+        <tr>
+            <td>{{'Итого: ' + cart.totalPrice}}</td>
+            <td>
+                <button type="button" class="btn btn-outline-danger" ng-click="dropCartsProducts()"><i class="bi bi-cart-dash-fill"></i></button>
             </td>
         </tr>
         </tbody>
