--- a/front/src/main/resources/static/index.html
+++ b/front/src/main/resources/static/index.html
@@ -13,19 +13,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="index.js"></script>
 </head>
 
 <body>
 
 <div class="container" ng-controller="indexController">
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNav"  style="padding: 4px;">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link align-middle" href="#">Spring market</a>
+                    <a class="nav-link" href="#!/">March Market</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#!/store">Каталог товаров</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#!/cart">Корзина</a>
                 </li>
                 <li class="nav-item" ng-show="!isUserLoggedIn()" style="padding: 4px;">
                     <form class="align-middle" ng-submit="tryToAuth()">
@@ -48,116 +53,12 @@
         </div>
     </nav>
 
-    <p></p>
-    <h1>March Market</h1>
-    <p></p>
-    <h3>Список товаров</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="fillTable()">
-        <div class="col-auto">
-            <input type="text" class="form-control" id="filterTitle" ng-model="filter.title" placeholder="Название">
-        </div>
-        <div class="col-auto">
-            <input type="number" class="form-control" id="filterMinPriceFilter" ng-model="filter.minPriceFilter" placeholder="Минимальная цена">
-        </div>
-        <div class="col-auto">
-            <input type="number" class="form-control" id="filterMaxPriceFilter" ng-model="filter.maxPriceFilter" placeholder="Максимальная цена">
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Поиск</button>
-        </div>
-    </form>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Цена</td>
-            <td></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="p in products">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="deleteProduct(p.id)"><i class="far fa-trash-alt"></i></button>
-                <button class="btn btn-secondary" ng-click="addToCart(p.id)"><i class="fas fa-cart-plus"></i></button>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <ng-view></ng-view>
 
-    <p></p>
-    <h3>Корзина</h3>
-    <p></p>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>ID</td>
-            <td>Название</td>
-            <td>Количество</td>
-            <td>Цена</td>
-            <td></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="item in cart.items">
-            <td>{{item.productId}}</td>
-            <td>{{item.productTitle}}</td>
-            <td>
-                {{item.quantity}}
-                <div class="btn-group-vertical">
-                    <button class="btn btn-outline-secondary btn-sm" ng-click="changeQuantityOfProduct(item.productId, 1)"><i class="bi bi-arrow-up"></i></button>
-                    <button class="btn btn-outline-secondary btn-sm" ng-click="changeQuantityOfProduct(item.productId, -1)"><i class="bi bi-arrow-down"></i></button>
-                </div>
-
-            </td>
-            <td>{{item.pricePerProduct + 'x' + item.quantity + '=' + item.price}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="deleteProductOfCart(item.productId)"><i class="far fa-trash-alt"></i></button>
-            </td>
-        </tr>
-        <tr>
-            <td>{{'Итого: ' + cart.totalPrice}}</td>
-            <td>
-                <button type="button" class="btn btn-outline-danger" ng-click="dropCartsProducts()"><i class="bi bi-cart-dash-fill"></i></button>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-
-    <p></p>
-    <h3>Заказать</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="createOrder()">
-        <div class="col-auto">
-            <input type="text" class="form-control" id="orderDetailsAddress" ng-model="orderDetails.address" placeholder="Адрес">
-        </div>
-        <div class="col-auto">
-            <input type="text" class="form-control" id="orderDetailsPhone" ng-model="orderDetails.phone" placeholder="Телефон">
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-outline-success"><i class="bi bi-bag-check"></i></button>
-        </div>
-    </form>
-
-    <p></p>
-    <h3>Добавить продукт</h3>
-    <p></p>
-    <form class="row g-3" ng-submit="createNewProduct()">
-        <div class="col-auto">
-            <input type="text" class="form-control" id="newProductTitle" ng-model="newProduct.title" placeholder="Название">
-        </div>
-        <div class="col-auto">
-            <input type="number" class="form-control" id="newProductPrice" ng-model="newProduct.price" placeholder="Цена">
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Создать</button>
-        </div>
-    </form>
+    <script src="index.js"></script>
+    <script src="store/store.js"></script>
+    <script src="cart/cart.js"></script>
+    <script src="welcome/welcome.js"></script>
 </div>
 </body>
 </html>
