- Добавлена регистрация - На фронт добавлен раздел "мои заказы" - Для каждого пользователя и гостя - своя корзина - При авторизации создается merge корзины гостя и данного пользователя - жалкие попытки добавить реддис

--- a/front/src/main/resources/static/index.html
+++ b/front/src/main/resources/static/index.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#!/cart">Корзина</a>
                 </li>
+                <li class="nav-item" ng-show="isUserLoggedIn()">
+                    <a class="nav-link" href="#!/order">Мои заказы</a>
+                </li>
                 <li class="nav-item" ng-show="!isUserLoggedIn()" style="padding: 4px;">
                     <form class="align-middle" ng-submit="tryToAuth()">
                         <div class="input-group input-group-sm">
@@ -46,9 +49,13 @@
                 <li class="nav-item" ng-show="isUserLoggedIn()"  style="padding: 4px;">
                     <button class="btn btn-outline-secondary btn-sm" ng-click="tryToLogout()">Выйти</button>
                 </li>
+                <li class="nav-item" ng-show="!isUserLoggedIn()">
+                    <a class="nav-link" href="#!/registration">Регистрация</a>
+                </li>
                 <li class="nav-item"  style="padding: 4px;">
                     <button class="btn btn-outline-warning btn-sm" ng-click="authCheck()">Кто я?</button>
                 </li>
+
             </ul>
         </div>
     </nav>
@@ -57,8 +64,11 @@
 
     <script src="index.js"></script>
     <script src="store/store.js"></script>
+    <script src="order/order.js"></script>
     <script src="cart/cart.js"></script>
     <script src="welcome/welcome.js"></script>
+    <script src="registration/registration.js"></script>
+
 </div>
 </body>
 </html>
