--- a/front/src/main/resources/static/order/order.html
+++ b/front/src/main/resources/static/order/order.html
@@ -9,6 +9,7 @@
             <td>Адрес</td>
             <td>Телефон</td>
             <td>Цена</td>
+            <td>Действие</td>
             <td></td>
         </tr>
         </thead>
@@ -18,6 +19,10 @@
             <td>{{order.address}}</td>
             <td>{{order.phone}} </td>
             <td>{{order.totalPrice}} </td>
+            <td>
+                <label>Список товаров  </label>
+                <a type="button" class="btn btn-secondary" href="#!/orderItem?id={{order.id}}"><i class="bi bi-card-list"></i></a>
+            </td>
         </tr>
     </table>
 </div>
